Text was wrapping to next line in certain circumstances. CSS white-space command fixed this.

--- a/app/style/_repo.scss
+++ b/app/style/_repo.scss
@@ -106,6 +106,7 @@ div.repo-body {
 				overflow: hidden;
 				max-width: 15em;
 				text-overflow: ellipsis;
+				white-space: nowrap;
 			}
 		}
 	}
